RemoveTagFromParcel() route created & roundtripping when tag is deleted from Parcel Detail's Tags panel. Route removes first instance of tag, so that a user can remove just one instance on the very off chance that a tag is applied to a parcel twice (workflow won't allow for this, but database will). ParcelService function renamed.
