# Source/Rio.API/Controllers/ParcelController.cs
@@ -84,6 +84,34 @@ namespace Rio.API.Controllers
             return RequireNotNullThrowNotFound(parcelDto, "Parcel", parcelID);
         }
 
+        [HttpDelete("parcels/{parcelID}/removeTag/{tagID}")]
+        [ManagerDashboardFeature]
+        public ActionResult RemoveTag([FromRoute] int parcelID, [FromRoute] int tagID)
+        {
+            var currentUser = UserContext.GetUserFromHttpContext(_dbContext, HttpContext);
+            if (!UserCanAccessParcel(_dbContext, currentUser, parcelID))
+            {
+                return Forbid();
+            }
+
+            var tag = _dbContext.Tags.SingleOrDefault(x => x.TagID == tagID);
+            if (tag == null)
+            {
+                return BadRequest();
+            }
+
+            var parcelTagToDelete = _dbContext.ParcelTags.FirstOrDefault(x => x.ParcelID == parcelID && x.TagID == tagID);
+            if (parcelTagToDelete == null)
+            {
+                return BadRequest();
+            }
+
+            _dbContext.ParcelTags.Remove(parcelTagToDelete);
+            _dbContext.SaveChanges();
+            
+            return Ok();
+        }
+
         [HttpGet("parcels/{tagID}/listByTagID")]
         [ParcelViewFeature]
         public ActionResult<List<ParcelSimpleDto>> ListByTagID([FromRoute] int tagID)
